--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,8 @@
             android:title="@string/settings_action_string"
             android:icon="@drawable/ic_settings_white"
             app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_force_crash"
+        android:title="force crash"
+        app:showAsAction="ifRoom" />
 </menu>
