--- a/screens/src/main/res/drawable/bottombar_button_stats.xml
+++ b/screens/src/main/res/drawable/bottombar_button_stats.xml
@@ -3,10 +3,10 @@
     android:height="48dp"
     android:viewportWidth="48"
     android:viewportHeight="48">
-  <path
-      android:pathData="M9.7,35.8C10,35.9 11,36.5 11.9,35.3L18,26.5 24.4,32.7C24.7,33 25.2,33.2 25.6,33.1 26.1,33.1 26.5,32.8 26.8,32.4L37.4,17.2 37.8,22.3C37.9,23.6 39.1,23.8 39.5,23.8 40.4,23.7 41.1,23 41,22.1L40.3,13.1C40.3,12.2 39.5,11.6 38.6,11.6L29.6,12.3C28.8,12.4 28.1,13.1 28.2,14 28.2,14.9 29,15.6 29.9,15.5L35,15.1 25.3,29.1 18.8,22.9C18.5,22.5 18,22.4 17.6,22.4 17.1,22.5 16.7,22.7 16.4,23.1L9.3,33.5C8.8,34.3 9,35.3 9.7,35.8Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M39.7,36H13V9.5C13,8.7 12.1,8 11,8 9.9,8 9,8.7 9,9.5V38.7C9,39.4 9.6,40 10.3,40H39.7C40.4,40 41,38.7 41,38 41,37.3 40.4,36 39.7,36Z"
-      android:fillColor="#F2F2F2"/>
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M9.7,35.8C10,35.9 11,36.5 11.9,35.3L18,26.5 24.4,32.7C24.7,33 25.2,33.2 25.6,33.1 26.1,33.1 26.5,32.8 26.8,32.4L37.4,17.2 37.8,22.3C37.9,23.6 39.1,23.8 39.5,23.8 40.4,23.7 41.1,23 41,22.1L40.3,13.1C40.3,12.2 39.5,11.6 38.6,11.6L29.6,12.3C28.8,12.4 28.1,13.1 28.2,14 28.2,14.9 29,15.6 29.9,15.5L35,15.1 25.3,29.1 18.8,22.9C18.5,22.5 18,22.4 17.6,22.4 17.1,22.5 16.7,22.7 16.4,23.1L9.3,33.5C8.8,34.3 9,35.3 9.7,35.8Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M39.7,36H13V9.5C13,8.7 12.1,8 11,8 9.9,8 9,8.7 9,9.5V38.7C9,39.4 9.6,40 10.3,40H39.7C40.4,40 41,38.7 41,38 41,37.3 40.4,36 39.7,36Z" />
 </vector>
