--- a/screens/src/main/res/drawable/topbar_button_calendar.xml
+++ b/screens/src/main/res/drawable/topbar_button_calendar.xml
@@ -3,25 +3,25 @@
     android:height="48dp"
     android:viewportWidth="48"
     android:viewportHeight="48">
-  <path
-      android:pathData="M33,14.5H30.9V12.9C30.9,12.4 30.5,12 30,12H27.8C27.3,12 26.9,12.4 26.9,12.9V14.5H21.1V12.9C21.1,12.4 20.7,12 20.2,12H18C17.5,12 17.1,12.4 17.1,12.9V14.5H15C13.3,14.5 12,15.9 12,17.5V33C12,34.6 13.3,36 15,36H33C34.7,36 36,34.6 36,33V17.6C36,15.9 34.7,14.5 33,14.5ZM33,34H15C14.4,34 14,33.5 14,33V20.8H34V33C34,33.5 33.6,34 33,34Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M30.8,23.3H28.3C27.9,23.3 27.7,23.7 27.7,24V25.9C27.7,26.2 28,26.5 28.3,26.5H30.8C31.2,26.5 31.5,26.2 31.5,25.9V24C31.5,23.7 31.2,23.3 30.8,23.3Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M25.3,23.3H22.7C22.4,23.3 22.1,23.7 22.1,24V25.9C22.1,26.2 22.4,26.5 22.7,26.5H25.3C25.7,26.5 25.9,26.2 25.9,25.9V24C25.9,23.7 25.6,23.3 25.3,23.3Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M25.3,28.3H22.7C22.4,28.3 22.1,28.6 22.1,29V30.8C22.1,31.2 22.4,31.5 22.7,31.5H25.3C25.7,31.5 25.9,31.2 25.9,30.8V29C25.9,28.6 25.6,28.3 25.3,28.3Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M30.8,28.3H28.3C27.9,28.3 27.7,28.6 27.7,29V30.8C27.7,31.2 28,31.5 28.3,31.5H30.8C31.2,31.5 31.5,31.2 31.5,30.8V29C31.5,28.6 31.2,28.3 30.8,28.3Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M19.7,23.3H17.2C16.8,23.3 16.5,23.7 16.5,24V25.9C16.5,26.2 16.8,26.5 17.2,26.5H19.7C20.1,26.5 20.4,26.2 20.4,25.9V24C20.4,23.7 20.1,23.3 19.7,23.3Z"
-      android:fillColor="#F2F2F2"/>
-  <path
-      android:pathData="M19.7,28.3H17.2C16.8,28.3 16.5,28.6 16.5,29V30.8C16.5,31.2 16.8,31.5 17.2,31.5H19.7C20.1,31.5 20.4,31.2 20.4,30.8V29C20.4,28.6 20.1,28.3 19.7,28.3Z"
-      android:fillColor="#F2F2F2"/>
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M33,14.5H30.9V12.9C30.9,12.4 30.5,12 30,12H27.8C27.3,12 26.9,12.4 26.9,12.9V14.5H21.1V12.9C21.1,12.4 20.7,12 20.2,12H18C17.5,12 17.1,12.4 17.1,12.9V14.5H15C13.3,14.5 12,15.9 12,17.5V33C12,34.6 13.3,36 15,36H33C34.7,36 36,34.6 36,33V17.6C36,15.9 34.7,14.5 33,14.5ZM33,34H15C14.4,34 14,33.5 14,33V20.8H34V33C34,33.5 33.6,34 33,34Z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M30.8,23.3H28.3C27.9,23.3 27.7,23.7 27.7,24V25.9C27.7,26.2 28,26.5 28.3,26.5H30.8C31.2,26.5 31.5,26.2 31.5,25.9V24C31.5,23.7 31.2,23.3 30.8,23.3Z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M25.3,23.3H22.7C22.4,23.3 22.1,23.7 22.1,24V25.9C22.1,26.2 22.4,26.5 22.7,26.5H25.3C25.7,26.5 25.9,26.2 25.9,25.9V24C25.9,23.7 25.6,23.3 25.3,23.3Z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M25.3,28.3H22.7C22.4,28.3 22.1,28.6 22.1,29V30.8C22.1,31.2 22.4,31.5 22.7,31.5H25.3C25.7,31.5 25.9,31.2 25.9,30.8V29C25.9,28.6 25.6,28.3 25.3,28.3Z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M30.8,28.3H28.3C27.9,28.3 27.7,28.6 27.7,29V30.8C27.7,31.2 28,31.5 28.3,31.5H30.8C31.2,31.5 31.5,31.2 31.5,30.8V29C31.5,28.6 31.2,28.3 30.8,28.3Z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M19.7,23.3H17.2C16.8,23.3 16.5,23.7 16.5,24V25.9C16.5,26.2 16.8,26.5 17.2,26.5H19.7C20.1,26.5 20.4,26.2 20.4,25.9V24C20.4,23.7 20.1,23.3 19.7,23.3Z" />
+    <path
+        android:fillColor="#F2F2F2"
+        android:pathData="M19.7,28.3H17.2C16.8,28.3 16.5,28.6 16.5,29V30.8C16.5,31.2 16.8,31.5 17.2,31.5H19.7C20.1,31.5 20.4,31.2 20.4,30.8V29C20.4,28.6 20.1,28.3 19.7,28.3Z" />
 </vector>
