--- a/screens/src/main/res/menu/toolbar_menu_home.xml
+++ b/screens/src/main/res/menu/toolbar_menu_home.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu>
 
-<!--    <item-->
-<!--        android:id="@+id/actionbar_about"-->
-<!--        android:icon="@drawable/ic_menu_search_24"-->
-<!--        android:title="@string/title_about"-->
-<!--        android:showAsAction="always" />-->
+    <!--    <item-->
+    <!--        android:id="@+id/actionbar_about"-->
+    <!--        android:icon="@drawable/ic_menu_search_24"-->
+    <!--        android:title="@string/title_about"-->
+    <!--        android:showAsAction="always" />-->
 
-<!--    <item-->
-<!--        android:id="@+id/actionbar_settings"-->
-<!--        android:icon="@drawable/ic_avatar_placeholder_24"-->
-<!--        android:title="@string/title_settings"-->
-<!--        android:showAsAction="always" />-->
+    <!--    <item-->
+    <!--        android:id="@+id/actionbar_settings"-->
+    <!--        android:icon="@drawable/ic_avatar_placeholder_24"-->
+    <!--        android:title="@string/title_settings"-->
+    <!--        android:showAsAction="always" />-->
 
 </menu>
