--- a/screens/src/main/res/navigation/mobile_navigation.xml
+++ b/screens/src/main/res/navigation/mobile_navigation.xml
@@ -5,28 +5,28 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/navigation_home">
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_home"-->
-<!--        android:name="full package and class name of target fragment"-->
-<!--        android:label="@string/title_home"-->
-<!--        tools:layout="@layout/fragment layout file" />-->
+    <fragment
+        android:id="@+id/navigation_home"
+        android:name="fr.shining_cat.everyday.screens.views.home.HomeFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/home_fragment" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_sessions"-->
-<!--        android:name="full package and class name of target fragment"-->
-<!--        android:label="@string/title_sessions"-->
-<!--        tools:layout="@layout/fragment layout file" />-->
+    <fragment
+        android:id="@+id/navigation_sessions"
+        android:name="fr.shining_cat.everyday.screens.views.sessions.SessionsFragment"
+        android:label="@string/title_sessions"
+        tools:layout="@layout/sessions_fragment" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_statistics"-->
-<!--        android:name="full package and class name of target fragment"-->
-<!--        android:label="@string/title_statistics"-->
-<!--        tools:layout="@layout/fragment layout file" />-->
+    <fragment
+        android:id="@+id/navigation_statistics"
+        android:name="fr.shining_cat.everyday.screens.views.statistics.StatisticsFragment"
+        android:label="@string/title_statistics"
+        tools:layout="@layout/statistics_fragment" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_rewards"-->
-<!--        android:name="full package and class name of target fragment"-->
-<!--        android:label="@string/title_rewards"-->
-<!--        tools:layout="@layout/fragment layout file" />-->
+    <fragment
+        android:id="@+id/navigation_rewards"
+        android:name="fr.shining_cat.everyday.screens.views.rewards.RewardsFragment"
+        android:label="@string/title_rewards"
+        tools:layout="@layout/rewards_fragment" />
 
 </navigation>
