toolbars and icons for fragments

--- a/screens/src/main/res/drawable/topbar_button_calendar.xml
+++ b/screens/src/main/res/drawable/topbar_button_calendar.xml
@@ -3,25 +3,25 @@
     android:height="48dp"
     android:viewportWidth="48"
     android:viewportHeight="48">
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M33,14.5H30.9V12.9C30.9,12.4 30.5,12 30,12H27.8C27.3,12 26.9,12.4 26.9,12.9V14.5H21.1V12.9C21.1,12.4 20.7,12 20.2,12H18C17.5,12 17.1,12.4 17.1,12.9V14.5H15C13.3,14.5 12,15.9 12,17.5V33C12,34.6 13.3,36 15,36H33C34.7,36 36,34.6 36,33V17.6C36,15.9 34.7,14.5 33,14.5ZM33,34H15C14.4,34 14,33.5 14,33V20.8H34V33C34,33.5 33.6,34 33,34Z" />
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M30.8,23.3H28.3C27.9,23.3 27.7,23.7 27.7,24V25.9C27.7,26.2 28,26.5 28.3,26.5H30.8C31.2,26.5 31.5,26.2 31.5,25.9V24C31.5,23.7 31.2,23.3 30.8,23.3Z" />
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M25.3,23.3H22.7C22.4,23.3 22.1,23.7 22.1,24V25.9C22.1,26.2 22.4,26.5 22.7,26.5H25.3C25.7,26.5 25.9,26.2 25.9,25.9V24C25.9,23.7 25.6,23.3 25.3,23.3Z" />
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M25.3,28.3H22.7C22.4,28.3 22.1,28.6 22.1,29V30.8C22.1,31.2 22.4,31.5 22.7,31.5H25.3C25.7,31.5 25.9,31.2 25.9,30.8V29C25.9,28.6 25.6,28.3 25.3,28.3Z" />
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M30.8,28.3H28.3C27.9,28.3 27.7,28.6 27.7,29V30.8C27.7,31.2 28,31.5 28.3,31.5H30.8C31.2,31.5 31.5,31.2 31.5,30.8V29C31.5,28.6 31.2,28.3 30.8,28.3Z" />
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M19.7,23.3H17.2C16.8,23.3 16.5,23.7 16.5,24V25.9C16.5,26.2 16.8,26.5 17.2,26.5H19.7C20.1,26.5 20.4,26.2 20.4,25.9V24C20.4,23.7 20.1,23.3 19.7,23.3Z" />
-    <path
-        android:fillColor="#F2F2F2"
-        android:pathData="M19.7,28.3H17.2C16.8,28.3 16.5,28.6 16.5,29V30.8C16.5,31.2 16.8,31.5 17.2,31.5H19.7C20.1,31.5 20.4,31.2 20.4,30.8V29C20.4,28.6 20.1,28.3 19.7,28.3Z" />
+  <path
+      android:pathData="M36.1,11.3H33.2V9.2C33.2,8.5 32.6,8 32,8H29.1C28.4,8 27.9,8.5 27.9,9.2V11.3H20.1V9.2C20.1,8.5 19.6,8 19,8H16C15.4,8 14.8,8.5 14.8,9.2V11.3H12C9.8,11.3 8,13.2 8,15.4V36C8,38.2 9.8,40 12,40H36C38.2,40 40,38.2 40,36V15.4C40,13.2 38.2,11.3 36.1,11.3ZM36.1,37.3H12C11.2,37.3 10.7,36.7 10.7,36V19.8H37.4V36C37.4,36.7 36.8,37.3 36.1,37.3Z"
+      android:fillColor="#F2F2F2"/>
+  <path
+      android:pathData="M33.1,23.1H29.7C29.2,23.1 28.9,23.5 28.9,24V26.5C28.9,27 29.3,27.4 29.7,27.4H33.1C33.6,27.4 34,27 34,26.5V24C34,23.5 33.6,23.1 33.1,23.1Z"
+      android:fillColor="#F2F2F2"/>
+  <path
+      android:pathData="M25.7,23.1H22.3C21.8,23.1 21.5,23.5 21.5,24V26.5C21.5,27 21.9,27.4 22.3,27.4H25.7C26.2,27.4 26.6,27 26.6,26.5V24C26.6,23.5 26.2,23.1 25.7,23.1Z"
+      android:fillColor="#F2F2F2"/>
+  <path
+      android:pathData="M25.7,29.8H22.3C21.8,29.8 21.5,30.2 21.5,30.6V33.1C21.5,33.6 21.9,34 22.3,34H25.7C26.2,34 26.6,33.6 26.6,33.1V30.6C26.6,30.2 26.2,29.8 25.7,29.8Z"
+      android:fillColor="#F2F2F2"/>
+  <path
+      android:pathData="M33.1,29.8H29.7C29.2,29.8 28.9,30.2 28.9,30.6V33.1C28.9,33.6 29.3,34 29.7,34H33.1C33.6,34 34,33.6 34,33.1V30.6C34,30.2 33.6,29.8 33.1,29.8Z"
+      android:fillColor="#F2F2F2"/>
+  <path
+      android:pathData="M18.3,23.1H14.9C14.4,23.1 14,23.5 14,24V26.5C14,27 14.4,27.4 14.9,27.4H18.3C18.8,27.4 19.2,27 19.2,26.5V24C19.2,23.5 18.8,23.1 18.3,23.1Z"
+      android:fillColor="#F2F2F2"/>
+  <path
+      android:pathData="M18.3,29.8H14.9C14.4,29.8 14,30.2 14,30.6V33.1C14,33.6 14.4,34 14.9,34H18.3C18.8,34 19.2,33.6 19.2,33.1V30.6C19.2,30.2 18.8,29.8 18.3,29.8Z"
+      android:fillColor="#F2F2F2"/>
 </vector>
