--- a/screens/src/main/res/drawable/topbar_button_cards_list.xml
+++ b/screens/src/main/res/drawable/topbar_button_cards_list.xml
@@ -4,23 +4,27 @@
     android:viewportWidth="48"
     android:viewportHeight="48">
   <path
-      android:pathData="M20.7,11.2V12.2H22.2V11.2C22.2,10.3 22.8,9.6 23.7,9.6H34.2C35,9.6 35.7,10.3 35.7,11.2V26.9C35.7,27.7 35,28.4 34.2,28.4H33.1V30H34.2C35.9,30 37.2,28.6 37.2,26.9V11.2C37.2,9.4 35.9,8 34.2,8H23.7C22,8 20.7,9.4 20.7,11.2Z"
-      android:fillColor="#F2F2F2"/>
+      android:pathData="M17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z"
+      android:fillColor="?attr/colorOnPrimary"/>
   <path
-      android:pathData="M15.8,16.2V17.2H17.3V16.2C17.3,15.3 18,14.6 18.8,14.6H29.4C30.2,14.6 30.9,15.3 30.9,16.2V31.8C30.9,32.7 30.2,33.4 29.4,33.4H28.2V35H29.4C31,35 32.4,33.6 32.4,31.8V16.2C32.4,14.4 31,13 29.4,13H18.8C17.2,13 15.8,14.4 15.8,16.2Z"
-      android:fillColor="#F2F2F2"/>
+      android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2Z"
+      android:fillColor="?attr/colorOnPrimary"/>
   <path
-      android:pathData="M27.6,35.3V36.9C27.6,38.6 26.2,40 24.5,40H14C12.3,40 11,38.6 11,36.9V21.1C11,19.4 12.3,18 14,18H15.5,17 24.5C26.2,18 27.6,19.4 27.6,21.1V33.7,35.3ZM26,21.1V36.9C26,37.7 25.4,38.4 24.5,38.4H14C13.2,38.4 12.5,37.7 12.5,36.9V21.1C12.5,20.2 13.2,19.5 14,19.5H24.5C25.4,19.5 26,20.2 26,21.1Z"
-      android:fillColor="#F2F2F2"
+      android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2ZM17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z"
+      android:fillColor="?attr/colorOnPrimary"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M19.3,29.8C17.4,29.8 15.9,28.2 15.9,26.2 15.9,24.3 17.4,22.7 19.3,22.7 21.1,22.7 22.7,24.3 22.7,26.2 22.7,28.2 21.1,29.8 19.3,29.8ZM21.2,26.2C21.2,27.3 20.3,28.2 19.3,28.2 18.2,28.2 17.4,27.3 17.4,26.2 17.4,25.1 18.2,24.3 19.3,24.3 20.3,24.3 21.2,25.1 21.2,26.2Z"
-      android:fillColor="#F2F2F2"
+      android:pathData="M27.8,37.6C27.8,39.2 26.9,40 25.4,40H13.4C11.9,40 11,39.1 11,37.5L11,20.3C11,18.7 11.9,17.8 13.4,17.8H25.4C26.9,17.8 27.8,18.7 27.8,20.3V37.6ZM25.4,20.5V37.4C25.4,37.6 25.4,37.6 25.3,37.6L13.6,37.6C13.4,37.6 13.4,37.6 13.4,37.4V20.5C13.4,20.3 13.4,20.3 13.6,20.3L25.3,20.3C25.4,20.3 25.4,20.3 25.4,20.5Z"
+      android:fillColor="?attr/colorOnPrimary"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M15.5,32.9C15.1,32.9 14.8,32.6 14.8,32.1 14.8,31.7 15.1,31.3 15.5,31.3H23C23.5,31.3 23.8,31.7 23.8,32.1 23.8,32.6 23.5,32.9 23,32.9H15.5Z"
-      android:fillColor="#F2F2F2"/>
+      android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2ZM17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z"
+      android:fillColor="?attr/colorOnPrimary"
+      android:fillType="evenOdd"/>
   <path
-      android:pathData="M17.4,36.1C17,36.1 16.6,35.7 16.6,35.3 16.6,34.8 17,34.5 17.4,34.5H21.2C21.6,34.5 21.9,34.8 21.9,35.3 21.9,35.7 21.6,36.1 21.2,36.1H17.4Z"
-      android:fillColor="#F2F2F2"/>
+      android:pathData="M30.2,35.1C31.7,35.1 32.6,34.3 32.6,32.6V15.4C32.6,13.8 31.7,12.9 30.2,12.9H18.2C16.7,12.9 15.8,13.8 15.8,15.4V17.8H18.2V15.6C18.2,15.4 18.2,15.4 18.4,15.4L30.1,15.4C30.2,15.4 30.2,15.4 30.2,15.6V32.4C30.2,32.6 30.2,32.6 30.1,32.6H25.4V35.1H30.2Z"
+      android:fillColor="?attr/colorOnPrimary"/>
+  <path
+      android:pathData="M35,30.2C36.5,30.2 37.4,29.3 37.4,27.7V10.5C37.4,8.9 36.5,8 35,8H23C21.5,8 20.6,8.9 20.6,10.5V12.9H23V10.7C23,10.5 23,10.5 23.2,10.5L34.9,10.5C35,10.5 35,10.5 35,10.7V27.5C35,27.7 35,27.7 34.9,27.7H30.2V30.2H35Z"
+      android:fillColor="?attr/colorOnPrimary"/>
 </vector>
