--- a/settings/src/main/res/layout/activity_settings.xml
+++ b/settings/src/main/res/layout/activity_settings.xml
@@ -17,7 +17,9 @@
     <FrameLayout
         android:id="@+id/settings_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <include
         layout="@layout/layout_loading"
