--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -26,8 +26,9 @@
         <item name="android:windowAnimationStyle">@style/Animation.Everyday.BottomSheet.Modal</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="bottomSheetStyle">@style/Widget.Everyday.BottomSheet.Modal</item>
-        <item name="android:navigationBarColor">?attr/colorSurface</item>
+        <item name="android:navigationBarColor">?attr/colorPrimaryVariant</item>
         <item name="android:navigationBarDividerColor" tools:ignore="NewApi">@android:color/transparent</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
     <style name="Widget.Everyday.BottomSheet.Modal" parent="Widget.MaterialComponents.BottomSheet.Modal">
         <item name="shapeAppearanceOverlay">?attr/shapeAppearanceLargeComponent</item>
