Tried to customize incoherent color design choice from framework (using accent color for timepicker header background on light theme, but a dark grey on dark theme... could not get it to work because headerTextColor is a private attribute...

--- a/commons/src/main/res/layout/dialog_bottom_time_picker_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_time_picker_and_confirm.xml
@@ -21,6 +21,7 @@
         android:id="@+id/dialog_bottom_time_picker"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/TimePickerWidgetStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button" />
