--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="amber_800">#FF8F00</color>
     <color name="grey_50">#FAFAFA</color>
     <color name="grey_100">#F5F5F5</color>
+    <color name="grey_200">#EEEEEE</color>
     <color name="grey_800">#424242</color>
     <color name="grey_900">#212121</color>
 
