--- a/commons/src/main/res/values/themes.xml
+++ b/commons/src/main/res/values/themes.xml
@@ -62,4 +62,14 @@
             ?attr/colorControlHighlight
         </item>
     </style>
+
+    <style name="TimePickerWidgetStyle" parent="@android:style/Widget.Material.Light.TimePicker">
+        <!--TODO? tried overwriting the default light version of the TimePicker because I don't like it using the Accent color as a header background color, but headerTextColor is private,
+                so there does not seem to be a way to assort the header text color to the background... o_O -->
+<!--    <item name="android:headerTextColor">?attr/colorOnSurface</item>-->
+<!--        <item name="android:headerBackground">#BDBDBD</item>-->
+<!--        <item name="android:numbersBackgroundColor">#BDBDBD</item>-->
+<!--        <item name="android:numbersTextColor">#FF0000</item>-->
+<!--        <item name="android:numbersInnerTextColor">#00FF00</item>-->
+    </style>
 </resources>
