--- a/commons/src/main/res/layout/dialog_bottom_select_list_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_select_list_and_confirm.xml
@@ -21,11 +21,13 @@
         android:id="@+id/dialog_bottom_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
         android:scrollbars="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button"
         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/dialog_bottom_select_list_item" />
