--- a/commons/src/main/res/layout/dialog_bottom_select_list_item.xml
+++ b/commons/src/main/res/layout/dialog_bottom_select_list_item.xml
@@ -9,8 +9,8 @@
         android:id="@+id/select_list_item_radio_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|center_vertical"
-        android:layout_marginEnd="8dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="0dp"
         android:clickable="false"
         tools:checked="true" />
 
