--- a/commons/src/main/res/layout/dialog_bottom_ringtone_picker_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_ringtone_picker_and_confirm.xml
@@ -2,11 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dialog_bottom_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/top_rounded_corners_shape"
-    android:backgroundTint="?attr/colorSurface">
+    android:backgroundTint="?attr/colorSurface"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <include
         layout="@layout/dialog_bottom_title_zone_with_dismiss_button"
