missing constants for previous commit handling DAO errors in RewardRepo removed Mockito replaced with mockK code formatting

--- a/commons/src/main/res/layout/dialog_bottom_big_button.xml
+++ b/commons/src/main/res/layout/dialog_bottom_big_button.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/top_rounded_corners_shape"
-    android:backgroundTint="?attr/colorSurface">
+    android:backgroundTint="?attr/colorSurface"
+    android:orientation="vertical">
 
     <include
-        layout="@layout/dialog_bottom_title_zone_with_dismiss_button"
         android:id="@+id/dialog_bottom_title_zone_with_dismiss_button"
+        layout="@layout/dialog_bottom_title_zone_with_dismiss_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,11 +25,11 @@
         android:layout_marginBottom="32dp"
         android:backgroundTint="?attr/colorSecondary"
         android:padding="16dp"
-        tools:text="@string/generic_string_DELETE"
         android:textColor="?attr/colorOnSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button" />
+        app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button"
+        tools:text="@string/generic_string_DELETE" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
