--- a/commons/src/main/res/layout/layout_loading.xml
+++ b/commons/src/main/res/layout/layout_loading.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        app:lottie_speed="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         app:lottie_rawRes="@raw/lottie_loading"
-        app:lottie_loop="true" />
+        app:lottie_speed="2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
