--- a/commons/src/main/res/drawable/top_rounded_corners_shape.xml
+++ b/commons/src/main/res/drawable/top_rounded_corners_shape.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-   <!-- <solid
-        android:color="?attr/colorPrimary"/> -->
+    <!-- <solid
+         android:color="?attr/colorPrimary"/> -->
     <corners
-        android:topRightRadius="16dp"
-        android:topLeftRadius="16dp"/>
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp" />
 </shape>
