--- a/commons/src/main/res/layout/dialog_bottom_message_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_message_and_confirm.xml
@@ -2,15 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/top_rounded_corners_shape"
-    android:backgroundTint="?attr/colorSurface">
+    android:backgroundTint="?attr/colorSurface"
+    android:orientation="vertical">
 
     <include
-        layout="@layout/dialog_bottom_title_zone_with_dismiss_button"
         android:id="@+id/dialog_bottom_title_zone_with_dismiss_button"
+        layout="@layout/dialog_bottom_title_zone_with_dismiss_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
