--- a/commons/src/main/res/layout/dialog_bottom_select_list_divider.xml
+++ b/commons/src/main/res/layout/dialog_bottom_select_list_divider.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <View android:layout_height="2dp"
+    <View
         android:layout_width="match_parent"
-        android:background="?attr/colorPrimary"/>
+        android:layout_height="2dp"
+        android:background="?attr/colorPrimary" />
 
 </LinearLayout>
