--- a/commons/src/main/res/layout/dialog_bottom_select_list_item.xml
+++ b/commons/src/main/res/layout/dialog_bottom_select_list_item.xml
@@ -18,6 +18,6 @@
         android:id="@+id/select_list_item_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="?attr/colorOnSurface"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical"
+        android:textColor="?attr/colorOnSurface" />
 </LinearLayout>
