--- a/screens/src/main/res/drawable/topbar_button_cards_list.xml
+++ b/screens/src/main/res/drawable/topbar_button_cards_list.xml
@@ -3,28 +3,28 @@
     android:height="48dp"
     android:viewportWidth="48"
     android:viewportHeight="48">
-  <path
-      android:pathData="M17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z"
-      android:fillColor="?attr/colorOnPrimary"/>
-  <path
-      android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2Z"
-      android:fillColor="?attr/colorOnPrimary"/>
-  <path
-      android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2ZM17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z"
-      android:fillColor="?attr/colorOnPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M27.8,37.6C27.8,39.2 26.9,40 25.4,40H13.4C11.9,40 11,39.1 11,37.5L11,20.3C11,18.7 11.9,17.8 13.4,17.8H25.4C26.9,17.8 27.8,18.7 27.8,20.3V37.6ZM25.4,20.5V37.4C25.4,37.6 25.4,37.6 25.3,37.6L13.6,37.6C13.4,37.6 13.4,37.6 13.4,37.4V20.5C13.4,20.3 13.4,20.3 13.6,20.3L25.3,20.3C25.4,20.3 25.4,20.3 25.4,20.5Z"
-      android:fillColor="?attr/colorOnPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2ZM17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z"
-      android:fillColor="?attr/colorOnPrimary"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M30.2,35.1C31.7,35.1 32.6,34.3 32.6,32.6V15.4C32.6,13.8 31.7,12.9 30.2,12.9H18.2C16.7,12.9 15.8,13.8 15.8,15.4V17.8H18.2V15.6C18.2,15.4 18.2,15.4 18.4,15.4L30.1,15.4C30.2,15.4 30.2,15.4 30.2,15.6V32.4C30.2,32.6 30.2,32.6 30.1,32.6H25.4V35.1H30.2Z"
-      android:fillColor="?attr/colorOnPrimary"/>
-  <path
-      android:pathData="M35,30.2C36.5,30.2 37.4,29.3 37.4,27.7V10.5C37.4,8.9 36.5,8 35,8H23C21.5,8 20.6,8.9 20.6,10.5V12.9H23V10.7C23,10.5 23,10.5 23.2,10.5L34.9,10.5C35,10.5 35,10.5 35,10.7V27.5C35,27.7 35,27.7 34.9,27.7H30.2V30.2H35Z"
-      android:fillColor="?attr/colorOnPrimary"/>
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:fillType="evenOdd"
+        android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2ZM17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:fillType="evenOdd"
+        android:pathData="M27.8,37.6C27.8,39.2 26.9,40 25.4,40H13.4C11.9,40 11,39.1 11,37.5L11,20.3C11,18.7 11.9,17.8 13.4,17.8H25.4C26.9,17.8 27.8,18.7 27.8,20.3V37.6ZM25.4,20.5V37.4C25.4,37.6 25.4,37.6 25.3,37.6L13.6,37.6C13.4,37.6 13.4,37.6 13.4,37.4V20.5C13.4,20.3 13.4,20.3 13.6,20.3L25.3,20.3C25.4,20.3 25.4,20.3 25.4,20.5Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:fillType="evenOdd"
+        android:pathData="M19.4,30.2C17.6,30.2 15.8,28.3 15.8,26.5 15.8,24.6 17.6,22.8 19.4,22.8 21.2,22.8 23,24.6 23,26.5 23,28.3 21.2,30.2 19.4,30.2ZM17,35.1C16.4,35.1 15.8,35.1 15.8,33.8 15.8,32.6 16.4,32.6 17,32.6L21.8,32.6C22.4,32.6 23,32.6 23,33.8 23,35.1 22.4,35.1 21.8,35.1H17Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M30.2,35.1C31.7,35.1 32.6,34.3 32.6,32.6V15.4C32.6,13.8 31.7,12.9 30.2,12.9H18.2C16.7,12.9 15.8,13.8 15.8,15.4V17.8H18.2V15.6C18.2,15.4 18.2,15.4 18.4,15.4L30.1,15.4C30.2,15.4 30.2,15.4 30.2,15.6V32.4C30.2,32.6 30.2,32.6 30.1,32.6H25.4V35.1H30.2Z" />
+    <path
+        android:fillColor="?attr/colorOnPrimary"
+        android:pathData="M35,30.2C36.5,30.2 37.4,29.3 37.4,27.7V10.5C37.4,8.9 36.5,8 35,8H23C21.5,8 20.6,8.9 20.6,10.5V12.9H23V10.7C23,10.5 23,10.5 23.2,10.5L34.9,10.5C35,10.5 35,10.5 35,10.7V27.5C35,27.7 35,27.7 34.9,27.7H30.2V30.2H35Z" />
 </vector>
