--- a/screens/src/main/res/menu/toolbar_menu_home.xml
+++ b/screens/src/main/res/menu/toolbar_menu_home.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <item
-            android:id="@+id/actionbar_about"
-            android:icon="@drawable/topbar_button_about"
-            android:title="@string/title_about"
-            app:showAsAction="always" />
+    <item
+        android:id="@+id/actionbar_about"
+        android:icon="@drawable/topbar_button_about"
+        android:title="@string/title_about"
+        app:showAsAction="always" />
 
-        <item
-            android:id="@+id/actionbar_settings"
-            android:icon="@drawable/topbar_button_settings"
-            android:title="@string/title_settings"
-            app:showAsAction="always" />
+    <item
+        android:id="@+id/actionbar_settings"
+        android:icon="@drawable/topbar_button_settings"
+        android:title="@string/title_settings"
+        app:showAsAction="always" />
 
 </menu>
