--- a/screens/src/main/res/navigation/navigation.xml
+++ b/screens/src/main/res/navigation/navigation.xml
@@ -18,7 +18,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
+    android:id="@+id/navigation"
     app:startDestination="@+id/navigation_home">
 
     <fragment
