WIP on session preset dialog

--- a/commons/src/main/res/layout/dialog_bottom_big_button.xml
+++ b/commons/src/main/res/layout/dialog_bottom_big_button.xml
@@ -37,10 +37,10 @@
         android:id="@+id/dialog_bottom_big_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="@dimen/space_xxl"
+        android:layout_marginBottom="@dimen/space_xxl"
         android:backgroundTint="?attr/colorSecondary"
-        android:padding="16dp"
+        android:padding="@dimen/medium_space"
         android:textColor="?attr/colorOnSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
