--- a/screens/src/main/res/layout/dialog_about.xml
+++ b/screens/src/main/res/layout/dialog_about.xml
@@ -36,9 +36,9 @@
         android:id="@+id/about_info_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xxl"
+        android:layout_marginEnd="@dimen/space_xxl"
         android:text="@string/info_text_string"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,9 +48,9 @@
         android:id="@+id/about_separator"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/medium_space"
+        android:layout_marginEnd="@dimen/space_xxl"
         android:background="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +60,8 @@
         android:id="@+id/about_app_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/no_space"
         android:text="@string/app_name"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/about_app_version"
@@ -72,9 +72,9 @@
         android:id="@+id/about_app_version"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xs"
+        android:layout_marginEnd="@dimen/space_xxl"
         android:text="@string/app_version"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/about_app_name"
@@ -84,9 +84,9 @@
         android:id="@+id/about_created_by"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xs"
+        android:layout_marginEnd="@dimen/space_xxl"
         android:text="@string/app_made_by"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/about_app_version"
@@ -96,9 +96,9 @@
         android:id="@+id/about_created_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xs"
+        android:layout_marginEnd="@dimen/space_xxl"
         android:text="@string/app_made_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/about_created_by"
@@ -108,8 +108,8 @@
         android:id="@+id/about_website"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xs"
         android:text="@string/website"
         app:layout_constraintBottom_toBottomOf="@id/about_logo"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,11 +126,11 @@
         android:id="@+id/about_logo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:padding="16dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/medium_space"
+        android:layout_marginEnd="@dimen/space_xxl"
+        android:layout_marginBottom="@dimen/space_xxl"
+        android:padding="@dimen/medium_space"
         android:adjustViewBounds="true"
         android:contentDescription="@string/content_description_kiwi_logo"
         android:scaleType="fitCenter"
