--- a/commons/src/main/res/layout/dialog_bottom_error_message.xml
+++ b/commons/src/main/res/layout/dialog_bottom_error_message.xml
@@ -22,6 +22,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/top_rounded_corners_shape"
     android:backgroundTint="?attr/colorSurface"
+    android:paddingBottom="@dimen/space_l"
     android:orientation="vertical">
 
     <include
@@ -33,30 +34,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/dialog_bottom_edit_text"
+    <ImageView
+        android:id="@+id/dialog_bottom_warning_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:layout_marginTop="@dimen/space_l"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/content_description_close_button"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialog_bottom_title_zone_with_dismiss_button"
+        app:srcCompat="@drawable/ic_warning" />
+
+    <TextView
+        android:id="@+id/dialog_bottom_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_xxl"
-        android:layout_marginTop="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xl"
         android:layout_marginEnd="@dimen/space_xxl"
+        android:textAlignment="center"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button"
+        app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_warning_icon"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere feugiat eleifend." />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/dialog_bottom_confirm_button"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/medium_space"
-        android:layout_marginBottom="@dimen/medium_space"
-        android:padding="@dimen/medium_space"
-        android:textColor="?attr/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_edit_text"
-        tools:text="@string/generic_string_DELETE" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
