--- a/commons/src/main/res/layout/dialog_bottom_message_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_message_and_confirm.xml
@@ -37,11 +37,13 @@
         android:id="@+id/dialog_bottom_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="@dimen/space_xxl"
+        android:layout_marginTop="@dimen/space_xxl"
+        android:layout_marginEnd="@dimen/space_xxl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textAlignment="center"
+        android:textColor="?attr/colorOnSurface"
         app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_title_zone_with_dismiss_button"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere feugiat eleifend." />
 
@@ -50,9 +52,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:padding="16dp"
+        android:layout_marginEnd="@dimen/medium_space"
+        android:layout_marginBottom="@dimen/medium_space"
+        android:padding="@dimen/medium_space"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
