--- a/commons/src/main/res/layout/dialog_bottom_select_list_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_select_list_and_confirm.xml
@@ -37,9 +37,9 @@
         android:id="@+id/dialog_bottom_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/medium_space"
+        android:layout_marginTop="@dimen/space_xxl"
+        android:layout_marginEnd="@dimen/medium_space"
         android:orientation="vertical"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,9 +53,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:padding="16dp"
+        android:layout_marginEnd="@dimen/medium_space"
+        android:layout_marginBottom="@dimen/medium_space"
+        android:padding="@dimen/medium_space"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
