--- a/commons/src/main/res/layout/dialog_bottom_select_list_item.xml
+++ b/commons/src/main/res/layout/dialog_bottom_select_list_item.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginEnd="0dp"
+        android:layout_marginEnd="@dimen/no_space"
         android:clickable="false"
         tools:checked="true" />
 
