--- a/commons/src/main/res/layout/dialog_bottom_time_picker_and_confirm.xml
+++ b/commons/src/main/res/layout/dialog_bottom_time_picker_and_confirm.xml
@@ -47,9 +47,9 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:padding="16dp"
+        android:layout_marginEnd="@dimen/medium_space"
+        android:layout_marginBottom="@dimen/medium_space"
+        android:padding="@dimen/medium_space"
         android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
