--- a/screens/src/main/res/layout/fragment_home.xml
+++ b/screens/src/main/res/layout/fragment_home.xml
@@ -34,9 +34,9 @@
         android:id="@+id/fake_fragment_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/space_xs"
+        android:layout_marginTop="@dimen/space_xs"
+        android:layout_marginEnd="@dimen/space_xs"
         android:textAlignment="center"
         android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
@@ -49,8 +49,8 @@
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
         android:src="@drawable/add_sign"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="@dimen/space_xl"
+        android:layout_marginBottom="@dimen/space_xl"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/content_description_add_new_preset" />
