WIP on session presets display

--- a/screens/src/main/res/layout/fragment_home.xml
+++ b/screens/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,9 @@
         android:id="@+id/session_preset_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_audio_session_preset_view_holder"
+        tools:listitem="@layout/item_timed_session_preset_view_holder"
+        android:paddingStart="@dimen/space_xs"
+        android:paddingEnd="@dimen/space_xs"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
