--- a/screens/src/main/res/layout/item_timed_session_preset_view_holder.xml
+++ b/screens/src/main/res/layout/item_timed_session_preset_view_holder.xml
@@ -14,12 +14,12 @@
             android:id="@+id/timed_session_preset_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_l"
+            android:layout_marginTop="@dimen/space_xl"
             android:text="@string/timed_session_preset_title"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/title_level_2_text_size"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/timed_session_duration_label"
+            app:layout_constraintBottom_toTopOf="@id/timed_session_duration_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="@dimen/medium_space"
             android:layout_marginEnd="0dp"
-            android:layout_marginBottom="@dimen/space_l"
+            android:layout_marginBottom="@dimen/space_xl"
             android:ellipsize="end"
             android:text="@string/duration"
             android:textAlignment="center"
@@ -50,12 +50,11 @@
             android:layout_marginStart="@dimen/space_xs"
             android:layout_marginTop="@dimen/medium_space"
             android:layout_marginEnd="0dp"
-            android:layout_marginBottom="@dimen/space_l"
             android:ellipsize="end"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/normal_text_size"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/timed_session_duration_label"
             app:layout_constraintEnd_toStartOf="@id/timed_session_interval_label"
             app:layout_constraintStart_toEndOf="@id/timed_session_duration_label"
             app:layout_constraintTop_toBottomOf="@id/timed_session_preset_item_title"
@@ -69,14 +68,13 @@
             android:layout_marginStart="@dimen/medium_space"
             android:layout_marginTop="@dimen/medium_space"
             android:layout_marginEnd="0dp"
-            android:layout_marginBottom="@dimen/space_l"
             android:ellipsize="end"
             android:text="@string/interval"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/normal_text_size"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/timed_session_duration_label"
             app:layout_constraintEnd_toStartOf="@id/timed_session_interval_value"
             app:layout_constraintStart_toEndOf="@id/timed_session_duration_value"
             app:layout_constraintTop_toBottomOf="@id/timed_session_preset_item_title" />
@@ -88,12 +86,11 @@
             android:layout_marginStart="@dimen/space_xs"
             android:layout_marginTop="@dimen/medium_space"
             android:layout_marginEnd="0dp"
-            android:layout_marginBottom="@dimen/space_l"
             android:ellipsize="end"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/normal_text_size"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/timed_session_duration_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/timed_session_interval_label"
             app:layout_constraintTop_toBottomOf="@id/timed_session_preset_item_title"
