fixed crash when trying to access audio file through stored URI, wrong intent was used, not granting the app persistent access rights

--- a/screens/src/main/res/layout/item_audio_session_preset_view_holder.xml
+++ b/screens/src/main/res/layout/item_audio_session_preset_view_holder.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_xl"
             android:text="@string/audio_session_preset_title"
+            android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/title_level_2_text_size"
             android:textStyle="bold"
@@ -49,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/audio_session_preset_title"
+            android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
             android:textSize="@dimen/title_level_2_text_size"
             android:textStyle="bold"
